changed /projects --> /learning

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -61,7 +61,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/reading">reading <img src="/!g/pix/updated1.gif" alt="updated"></a>
 
 			<h3 class="misc"> misc</h3>
-			<a href="/projects">projects</a>
+			<a href="/learning">learning in public</a>
 			<a href="/safe-spot">safe spot</a>
 			<a href="/faq">FAQ</a>
 
