--- a/doqmeat/learning/bash/index.html
+++ b/doqmeat/learning/bash/index.html
@@ -71,7 +71,7 @@
 		<br>
 		<b>last updated on: 29.aug.24</b>
 		<br>
-		<a href="/projects">projects</a> / <a href="/">home</a> / <a href="#">top</a>
+		<a href="../index.html">learning</a> / <a href="/">home</a> / <a href="#">top</a>
 	</footer>
 </body>
 
