--- a/doqmeat/learning/javascript/freecodecamp-1.html
+++ b/doqmeat/learning/javascript/freecodecamp-1.html
@@ -18,7 +18,6 @@
 			height: 100%;
 			font-family: consolas;
 		}
-
 	</style>
 </head>
 
@@ -38,7 +37,7 @@
 	<footer>
 		....... ᓚᘏᗢ .......
 		<br>
-		<a href="index.html">learning JS</a> / <a href="/projects">projects</a> / <a href="/">home</a> / <a href="#">top</a>
+		<a href="index.html">JS</a> / <a href="../index.html">learning</a> / <a href="/">home</a> / <a href="#">top</a>
 	</footer>
 </body>
 
