--- a/doqmeat/learning/javascript/index.html
+++ b/doqmeat/learning/javascript/index.html
@@ -52,7 +52,7 @@
 		<br>
 		<b>last updated on: 22.nov.24</b>
 		<br>
-		<a href="/projects">projects</a> / <a href="/">home</a> / <a href="#">top</a>
+		<a href="../index.html">projects</a> / <a href="/">home</a> / <a href="#">top</a>
 	</footer>
 </body>
 
