--- a/doqmeat/learning/javascript/practice.html
+++ b/doqmeat/learning/javascript/practice.html
@@ -80,7 +80,7 @@
 		<br>
 		....... ᓚᘏᗢ .......
 		<br>
-		<a href="/projects/learning-js/index.html">learning JS</a> / <a href="/projects/index.html">projects</a> / <a href="/">home</a> / <a href="#">top</a>
+		<a href="index.html">JS</a> / <a href="../index.html">learning</a> / <a href="/">home</a> / <a href="#">top</a>
 	</footer>
 	<script src="files/practice.js"></script>
 </body>
