--- a/doqmeat/learning/python/index.html
+++ b/doqmeat/learning/python/index.html
@@ -58,7 +58,7 @@
     <br>
     last updated on <b>30.oct.24</b>
     <br>
-    <a href="/projects">projects</a> / <a href="/">home</a> / <a href="#">top</a>
+    <a href="../index.html">learning</a> / <a href="/">home</a> / <a href="#">top</a>
   </footer>
 </body>
 
