--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -111,7 +111,7 @@
 				↳
 				<a href="/music/listening-log" target="_parent">music</a>
 			</ul>
-			<li><a href="/projects">projects</a></li>
+			<li><a href="/learning">learning in public</a></li>
 			<ul>
 				↳
 				<a href="/projects/bash" target="_parent">bash reference sheet</a>
