--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -43,13 +43,15 @@
 
 				<button onclick="goToYear('y2024')">
 					<span class="year">2024</span>
-					<img src="!g/241117-steve.jpeg" alt="2024 button thumbnail">
 					<br>
 					<span id="logs2024">total logs: </span></button>
 			</section>
 			<!-- 2025 section -->
 			<section id="y2025">
 				<!-- logs under here!!! -->
+				<article>
+					<p><b>25.jan.25 - 1pm</b> this C++ shit is scary bro <img src="/!g/pix/catsweat.gif" alt=""></p>
+				</article>
 				<article>
 					<p><b>22.jan.25 - 5pm</b> when i mention the horrors i am talking about the political horrors happening in the US btw. which will inevitably affect PR. specially with our stupid ass governor.... wanting to make a statue of trump here... <img src="/!g/pix/catangry.gif"> i need a lot specific people to die so i can be at peace.</p>
 				</article>
