--- a/doqmeat/guestbook/index.html
+++ b/doqmeat/guestbook/index.html
@@ -21,7 +21,7 @@
 	<main>
 		<h1>doqmeat's (archived) guestbook</h1>
 		<center>
-			<p>been having problems with spam + idk why it's not loading.... so i moved guestbook to <a href="https://doqmeat.atabook.org" target="_blank">atabook</a> !</p>
+			<p>been having problems with spam + idk why it's not loading.... so i moved guestbook to <a href="https://doqmeat.atabook.org" target="_blank">atabook</a> ! this guestbook will be archived. in case it ever loads back.</p>
 		</center>
 		<center>
 			<div id="pop-up">
