--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -114,13 +114,13 @@
 			<li><a href="/learning">learning in public</a></li>
 			<ul>
 				↳
-				<a href="/projects/bash" target="_parent">bash reference sheet</a>
+				<a href="/learning/bash" target="_parent">bash reference sheet</a>
 				<br />
 				↳
-				<a href="/projects/javascript/index.html" target="_parent">learning javascript</a>
+				<a href="/learning/javascript/index.html" target="_parent">learning javascript</a>
 				<br />
 				↳
-				<a href="/projects/python/index.html" target="_parent">learning python</a>
+				<a href="/learning/python/index.html" target="_parent">learning python</a>
 			</ul>
 			<li><a href="https://doqmeat.atabook.org/" target="_blank" class="outlink">guestbook</a></li>
 			<ul>
