--- a/doqmeat/music/playlists.html
+++ b/doqmeat/music/playlists.html
@@ -21,11 +21,18 @@
 	h4 {
 		text-align: left;
 	}
+
+	iframe {
+		width: 100%;
+		height: 152px;
+	}
 </style>
 
 <body>
 	<div id="frame">
 		<h2>playlists</h2>
+		<p>note: this page is a bit slow because of the multiple embeds. sorry in advance.</p>
+		<nav>navigation: <a href="#personal">personal</a> / <a href="#genres">genres</a> / <a href="#other">other</a></nav>
 		<h3 id="personal" class="title">personal</h3>
 		<p>this is my main spotify playlist! it has every single song that i love to this date. i made this playlist during 2016 and its really fun to see how my music taste has evolved throughout the years by looking at this playlist. its kinda like a memory box of sorts.</p>
 
@@ -39,15 +46,12 @@
 
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3fowFbayGHBD49MrDOLMBT?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
-		<h3 id="genres" class="title">genre favs</h3>
+		<h3 id="genres" class="title">genres</h3>
 		<p>there's a bunch of different genres that i like so i thought it would be nice to put them all in playlist showcasing my favorite ones :3</p>
 		<h4>kpop</h4>
 		<p>basically a little bit of everything as kpop is basically a mix and match of many many genres but at least for my taste, i really enjoy the electronic, dance, and house inspired songs.</p>
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0sJwG0RCKuYtYVHb4dnkQP?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-		<details>
-			<summary>youtube playlist</summary>
-			<iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=-U2FK--T9R_DnSNA&amp;list=PLJJj3iCewWn3JZCpr4DNcjo6AOY4RfQaR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-		</details>
+		<iframe width="100%" height="152" src="https://www.youtube-nocookie.com/embed/videoseries?si=-U2FK--T9R_DnSNA&amp;list=PLJJj3iCewWn3JZCpr4DNcjo6AOY4RfQaR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 		<h4>drum n bass / breakbeat</h4>
 
 		<p>i NEED to get more into DNB i really love this genre a lot so if anyone has some recs pls let me know!</p>
@@ -83,11 +87,12 @@
 		<h4>vocaloid</h4>
 		<p>one of my fav playlists. i might make a page talking about The Vocaloid Songs that really solidified my interest in the "genre". maybe in the future. cover img is by my friend <a href="https://twitter.com/sdfhgg_" target="_blank">@sdfhgg_</a> on twitter!</p>
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6OlN4Gjxcrhzd8h61yyRjc?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+		<iframe width="100%" height="152" src="https://www.youtube-nocookie.com/embed/videoseries?si=qXY2t9lnWlv2O5uj&amp;list=PLJJj3iCewWn3lE58jWAfouzXZ7Nz2zvKF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 		<h4>indie</h4>
 		<p>classics of my high school era mostly.</p>
 
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0X23J9s7o8uI9rOjxjljeL?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-		<h3>other</h3>
+		<h3 id="other">other</h3>
 		<h4>instrumentals</h4>
 		<p>i have such a soft spot for instrumentals oh my lord... these are my favorites. i'd listen to any song with a good beat.</p>
 		<iframe width="100%" height="215" src="https://www.youtube-nocookie.com/embed/videoseries?si=-zDghyYMFePIztat&amp;list=PLJJj3iCewWn0Ja8x25MldQJ6Pyoz3wd_9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -104,6 +109,13 @@
 		<p>collecting songs that either start or end with gasps or moans bc i find them interesting.</p>
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5tHqK8nfM6v0wBtAxBYk4n?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
+		<h4>live performances</h4>
+		<iframe width="100%" height="152" src="https://www.youtube-nocookie.com/embed/videoseries?si=gdgfZuMyAGxtaePO&amp;list=PLJJj3iCewWn2T5F7s-Yihq1BL6qL-nBK0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+		<h4>homestuck favs</h4>
+		<p>don't even get me started. <a href="listening-log/2024/summer#3">listening log for vol. 1 -4</a></p>
+		<iframe width="100%" height="152" src="https://www.youtube-nocookie.com/embed/videoseries?si=R4zEf9kEwYZDrVMR&amp;list=PLJJj3iCewWn1qBZw_LMH2rDwgWBlkYp0J" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 		<h3 id="by-year" class="title">by year</h3>
 		<p>every song ive ever heard and liked on that year <img src="/!g/pix/catdance1.gif"> i love making these playlists. yet another way of seeing the evolution of what i listen to.</p>
 		<details>
@@ -116,7 +128,7 @@
 	</div>
 
 	<footer>
-		last updated: 31.oct.24 <br>
+		last updated: 25.jan.25 <br>
 		<a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a>
 	</footer>
 </body>
