music related links

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -46,18 +46,18 @@
    <a href="info.html" target="mainframe">info</a>
    <a href="featured.html" target="mainframe">featured music</a>
    <a href="playlists.html" target="mainframe">playlists</a>
-   <a href="listening-log/index.html" target="mainframe">listening logs</a>
    <a href="concerts/index.html" target="mainframe">concerts</a>
    <a href="kpop-producers.html" target="mainframe">fav kpop producers</a>
+   <a href="listening-log/index.html" target="mainframe">listening logs</a>
    <a href="recaps/index.html" target="mainframe">yearly recaps</a>
+   <a href="links.html" target="mainframe">related links</a>
 
    <h4>other</h4>
    <a title="blog post" href="/blog/2023/230912-vocaloid.html" target="_blank">my history with vocaloid</a>
 
-   <h4>offsite</h4>
-   <a href="https://rateyourmusic.com/~doqmeat" target="_blank">rate your music</a>
-   <a href="https://www.last.fm/user/lakiitu" target="_blank">last.fm</a>
-   <a href="https://isitbandcampfriday.com/" target="_blank">is it bandcamp friday?</a>
+   <h4>profiles</h4>
+   <a href="https://rateyourmusic.com/~doqmeat" target="_blank" class="outlink">rate your music</a>
+   <a href="https://www.last.fm/user/lakiitu" target="_blank" class="outlink">last.fm</a>
   </nav>
 
   <main id="frame" class="box">
@@ -68,6 +68,7 @@
 
   <div id="updates" class="box">
    <h3>updates</h3>
+   <p><b>26.jan.25</b> - added <a href="links.html" target="mainframe">related links</a> page</p>
    <p><b>23.jan.25</b> - updated <a href="kpop-producers.html" target="mainframe">fav kpop producers</a> + added a message box where you can recommend me something and it will pop up to my e-mail!</p>
    <p><b>17.jan.25</b> - new featured releases!</p>
    <p><b>02.jan.25</b> - don't feel like doing a recap for last year (i didn't listen to much tbh!) so here's my <a href="https://rateyourmusic.com/list/doqmeat/2024-highlights/" target="_blank" class="outlink">2024 highlights</a> list on RYM</p>
