updated button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -192,6 +192,9 @@
 			<a href="https://bunnyisland.neocities.org/" target="_blank"><img src="!g/bunnyisland.png" alt="bunnyisland"></a>
 			<a href="https://pixeliana.neocities.org/" target="_blank"><img src="!g/pixeliana.gif" alt="pixeliana"></a>
 			<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
+			<a title="april" href="https://tilde.club/~april/" target="_blank"><img src="!g/april.gif" alt="april"></a>
+			<a href="https://pluto22.neocities.org/" target="_blank"><img src="!g/pluto2.png" alt="pluto22"></a>
+			<a href="https://liminalmind.neocities.org/" target="_blank"><img src="!g/liminalmind.png" alt="liminalmind"></a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">e-mail me</a> if you do have one!)</h4>
@@ -293,6 +296,7 @@
 			<a href="https://unicodeangel.neocities.org/" target="_blank"><img src="!g/unicodeangel.gif" alt="unicodeangel"></a>
 			<a href="https://milk-tea.neocities.org" target="_blank"><img src="!g/milk-tea.gif" alt="milk-tea"></a>
 			<a title="web dev hobbyist site!" href="https://fabled.day/" target="_blank"><img src="!g/fabled.gif" alt="fabled"></a>
+			<a href="https://petyou.neocities.org/" target="_blank"><img src="!g/petyou.jpg" alt="petyou"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
@@ -322,6 +326,7 @@
 			<a href="https://xixxii.neocities.org/" target="_blank"><img src="!g/xixxii.gif" alt="xixxii"></a>
 			<a href="https://mooncandy.neocities.org/" target="_blank"><img src="!g/mooncandy.gif" alt="mooncandy"></a>
 			<a href="https://k0nfette.neocities.org/" target="_blank"><img src="!g/k0nfette.gif" alt="k0nfette"></a>
+			<a href="https://lucida.to/" target="_blank"><img src="!g/lucida.png" alt="lucida"></a>
 		</div>
 
 		<p><a href="https://www.ippotsk.com/" target="_blank">ippotsk.com</a></p>
@@ -433,11 +438,9 @@
 			<a title="finn - i love their /cats page the most!" href="https://snowenti.neocities.org" target="_blank"><img src="!g/snowenti.gif"></a>
 			<a title="r0b1n666 - cool art!" href="https://r0b1n666.neocities.org" target="_blank"><img src="!g/r0b1n666.gif"></a>
 			<a href="https://panaceas.neocities.org" target="_blank"><img src="!g/panaceas.png"></a>
-			<a title="vagabondage" href="https://vagabond.sh" target="_blank"><img src="!g/vagabondage.gif"></a>
 			<a title="vulpix" href="https://ocha.cafe" target="_blank"><img src="!g/ocha.cafe.png" alt="ocha.cafe"></a>
 			<a title="maalused - has a very cool and mysterious vibe to it!" href="https://maalused.neocities.org" target="_blank"><img src="!g/maalused.gif"></a>
 			<a title="telle - nice site with interesting logs!" href="https://catcakes.neocities.org/" target="_blank"><img src="!g/catcakes.gif" alt="catcakes"></a>
-			<a title="april" href="https://tilde.club/~april/" target="_blank"><img src="!g/april.gif" alt="april"></a>
 		</div>
 
 		<p><a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> /
