added 1 (one) link to music links

--- a/doqmeat/music/links.html
+++ b/doqmeat/music/links.html
@@ -29,6 +29,8 @@
   <h3>websites</h3>
   <ul>
    <li><a href="https://www.koreanindie.com/" target="_blank">koreanindie.com</a> - focused on reviewing and interviewing the independent music scene of south korea</li>
+   <li><a href="https://lucida.to/" target="_blank">lucida.to</a> - an easy way to download music</li>
+   <li><a href="https://www.xmanagerapp.com" target="_blank">xmanagerapp.com</a> - browse spotify premium on android for $0</li>
   </ul>
 
   <h3>misc</h3>
@@ -37,7 +39,7 @@
   </ul>
  </main>
  <footer>
-  <b>last updated on 26.jan.25</b>
+  <b>last updated on 27.jan.25</b>
   <br>
   <a href="#">top</a> <span class="emoji2"></span> <a href="/music" target="_parent">music</a> <span class="emoji2"></span> <a href="/" target="_parent">home</a> <span class="emoji2"></span> <a href="/sitemap.html" target="_parent">sitemap</a>
  </footer>
