--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -34,7 +34,7 @@
 			<!-- homepage section -->
 			<section id="home">
 				<p>choose the year you want to view!</p>
-				<!-- <button onclick="goToYear('y2025')">
+				<!-- <button onclick="goToYear('y202x')">
 					<img src="" alt="2025 button thumbnail"> 2025</button> -->
 				<button onclick="goToYear('y2025')">
 					<span class="year">2025</span>
@@ -49,6 +49,9 @@
 			<!-- 2025 section -->
 			<section id="y2025">
 				<!-- logs under here!!! -->
+				<article>
+					<p><b>29.jan.25 - 4pm</b> the students of the university of puerto rico (the only public university here) organized a walk today protesting the (soon to be?) closure of 64 programs across all campuses and i was able to participate. my feet are dead but it was a very cool experience. i took some pics of the event and posters i saw. <button onclick="showPic('!g/250129-upr-1.png','people marching. first poster reads \'nos quieren insuficientes\'','first poster reads \'nos quieren insuficientes\', trans: \'they want us to be insufficent\'. second poster reads \'menos humanidades = mas ignorancia, defiende la UPR\', trans: \'less humanities = more ignorance, defend UPR\'')">upr-1.png</button> <button onclick="showPic('!g/250129-upr-2.png','in front of the administration offices. the puertorican flag is seen in the background alongside a poster that reads \'$157 el credito y la universidad en ruinas\'','we marched to the administrative offices. the poster reads \'$157 el crédito y la universidad en ruinas\', trans: \'at $157 the credit and the university in ruins\'')">upr-2.png</button> <button onclick="showPic('!g/250129-upr-3.png','people at the walk holding posters, one of them reads \'UPR U presente\' and another one reads \'nos quieren mansos, probres, y brutos\'','this one reads \'nos quieren mansos, probres, y brutos\' trans: \'they want us tamed, poor, and stupid\'. i couldn\'t get a pic but there was another poster that said \'it is easier to trick us without any education\'')">upr-3.png</button></p>
+				</article>
 				<article>
 					<p><b>25.jan.25 - 1pm</b> this C++ shit is scary bro <img src="/!g/pix/catsweat.gif" alt=""></p>
 				</article>
