added balatro page

--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -73,6 +73,9 @@ coded with love by des
 		<div class="thumb finished sim">
 			<a title="animal crossing new horizons" href="games/acnh/index.html" target="log"><img src="games/acnh/cover.jpg" tabindex="0"></a>
 		</div>
+		<div class="thumb notdone">
+			<a title="balatro" href="games/balatro/index.html" target="log"><img src="games/balatro/cover.jpg" tabindex="0"></a>
+		</div>
 		<div class="thumb notdone cat puzzle">
 			<a title="a little to the left" href="games/a-little-to-the-left/index.html" target="log"><img src="games/a-little-to-the-left/cover.jpg" tabindex="0"></a>
 		</div>
