--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -54,6 +54,7 @@
 		<h2>changelog</h2>
 
 		<div id="log">
+			<li>01.feb.25: new: <a href="games/balatro/index.html">balatro</a></li>
 			<li>17.jan.25: log: <a href="games/fallout-new-vegas/index.html">fallout new vegas</a></li>
 			<li>07.jan.25: log: <a href="games/kirby-planet-robobot/index.html">kirby planet robobot</a> + <a href="games/style-savvy-styling-star/index.html">style savvy styling star</a></li>
 			<li>24.dec.24: new <a href="games/style-savvy-fashion-forward/index.html">style savvy fashion forward</a> + log: <a href="games/style-savvy-styling-star/">style savvy styling star</a> + <a href="games/nintendogs-cats/index.html">nintendogs + cats</a> + screenshots: <a href="games/style-savvy-trendsetters/index.html">style savvy trendsetters</a> + <a href="games/kirby-planet-robobot/index.html">kirby planet robobot</a></li>
