--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -123,8 +123,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><span class="hl">reading:</span> <i>puella magi madoka magica: wraith arc</i></p>
 			<p><span class="hl">watching:</span> severance, twin peaks: the return</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> on the uni grind once again, cooking up homepage v5</p>
-			<p class="date">last updated on 27.jan.25</p>
+			<p><span class="hl">working on:</span> fighting for my life trying to understand calculus, cooking up homepage v5</p>
+			<p class="date">last updated on 02.feb.25</p>
 		</div>
 
 		<div id="piclog" class="box">
