added more links

--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -47,33 +47,43 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 					<li><a href="links/credit.html" target="iframe_a">site insp &amp; credit</a></li>
 					<li><a href="links/index.html" target="iframe_a">links</a></li>
 					<ul>
-						↳ <a href="links#c" target="iframe_a">coding</a>
+						↳ <a href="links#favs" target="iframe_a">personal favs</a>
+						<br>
+						<ul><small>↳ <a href="links#resource-pages" target="iframe_a">more resource pages</a></small></ul>
+						<br>
+						↳ <a href="links#code" target="iframe_a">coding</a>
 						<ul><small>
 								<a href="links#editor" target="iframe_a">editors</a>,
 								<a href="links#hosting" target="iframe_a">hosting</a>,
-								<a href="links#coding-help" target="iframe_a">HTML, CSS, and JS help</a>,
-								<a href="links#layouts" target="iframe_a">F2U layouts and templates</a>,
-								<a href="links#sites" target="iframe_a">useful sites</a>,
-								<a href="links#tut" target="iframe_a">tutorials / guides</a>,
-								<a href="links#cool" target="iframe_a">cool stuff to put on your site</a>,
-								<a href="links#neat" target="iframe_a">neat codes</a>,
+								<a href="links#code-misc" target="iframe_a">misc</a>,
 							</small></ul>
-						<br>↳ <a href="links#p" target="iframe_a">graphics</a>
+						↳ <a href="links#coding-help" target="iframe_a">HTML, CSS, and JS help</a>
+						<ul>
+							<small><a href="links#beginner" target="iframe_a">the basics (HTML and CSS focused)</a>, <a href="links#js" target="iframe_a">javascript</a>, <a href="links#css" target="iframe_a">css</a>, <a href="links#html" target="iframe_a">html</a>, <a href="links#layouts" target="iframe_a">html F2U templates</a>, <a href="links#sites" target="iframe_a">useful sites</a>,
+								<a href="links#tut" target="iframe_a">tutorials / guides</a>,
+								<a href="links#cool" target="iframe_a">cool stuff 4 your site</a>: <a href="links#guestbooks">guestbooks</a>, <a href="links#tools" target="iframe_a">tools</a>, <a href="links#calendar" target="iframe_a">calendars / clocks</a><a href="links#music" target="iframe_a">music</a>, <a href="links#rss" target="iframe_a">rss</a>,
+								<a href="links#help-misc" target="iframe_a">misc</a>, <a href="links#neat" target="iframe_a">neat pieces of code</a></small>
+						</ul>
+						<br>↳ <a href="links#img" target="iframe_a">graphics</a>
 						<ul><small>
-								<a href="links#F2U" target="iframe_a">sites w/ F2U materials</a>,
+								<a href="links#img-F2U" target="iframe_a">sites w/ F2U materials</a>,
 								<a href="links#bgs" target="iframe_a">backgrounds</a>,
 								<a href="links#archives" target="iframe_a">archives / collections</a>,
 								<a href="links#tumblr" target="iframe_a">tumblr blogs and masterposts</a>
 							</small></ul>
 						<br>↳ <a href="links#font" target="iframe_a">fonts</a>
-						<br>↳ <a href="links#img" target="iframe_a">image editing</a>
+						<br>↳ <a href="links#img-editing" target="iframe_a">image editing</a>
 						<br>↳ <a href="links#misc" target="iframe_a">misc resources</a>
 						<br>↳ <a href="links#fun" target="iframe_a">for fun</a>
 						<ul><small>
-								<a href="links#music" target="iframe_a">music</a>,
+								<a href="links#comm" target="iframe_a">communities</a>,
+								<a href="links#dragndrop" target="iframe_a">drag and drop web builders</a>,
+								<a href="links#emoticons" target="iframe_a">copy-paste sites</a>,
+								<a href="links#vid" target="iframe_a">videos</a>,
+								<a href="links#music-links" target="iframe_a">music</a>,
 								<a href="links#games" target="iframe_a">games</a>,
 								<a href="links#articles" target="iframe_a">articles</a>,
-								<a href="links#join" target="iframe_a">things to join</a>,
+								<a href="links#join" target="iframe_a">things to join</a>, <a href="links#pixel-cliques" target="iframe_a">pixel cliques</a>, <a href="links#webrings" target="iframe_a">webrings</a>,
 							</small></ul>
 					</ul>
 					<li><a href="links/fonts.html" target="iframe_a">font page</a></li>
