--- a/doqmeat/music/links.html
+++ b/doqmeat/music/links.html
@@ -24,6 +24,8 @@
   <ul>
    <li><a href="https://kdvs.org/" target="_blank">KDVS</a> - a radio managed by students from UC Davis, my friend hosts a <i>miku music</i> night every alternating saturday!</li>
    <li><a href="http://www.rpgamers.net/radio/" target="_blank">RPGamers Radio</a> - honestly incredible to me this is still up, used to put this on a lot while doing homework during high school. video game soundtracks.</li>
+   <li><a href="https://www.tree.fm/">tree.fm</a> - listen to a forest!</li>
+   <li><a href="https://www.lofiatc.com/?icao=kphx" target="_blank">lo-fi air traffic control</a></li>
   </ul>
 
   <h3>websites</h3>
