featured song n album + gitignore

--- a/doqmeat/music/featured.html
+++ b/doqmeat/music/featured.html
@@ -64,7 +64,24 @@ iframe2
 -->
 		<details open>
 			<summary>
-				<span class="date">17.jan.25 - ? : lemon melon cookie / 11100011</span>
+				<span class="date">08.feb.25 - ? : BAILE INoLVIDABLE / 4study4work4inst Vol.2</span>
+			</summary>
+			<table>
+				<td class="t-left">
+					<iframe width="718" height="404" src="https://www.youtube.com/embed/a1Femq4NPxs" title="BAD BUNNY - BAILE INoLVIDABLE (Video Oficial) | DeBÍ TiRAR MáS FOToS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p>lowkey blew my mind when i first heard it and also opened my heart to bad bunny.</p>
+				</td>
+				<td class="t-right">
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=PmIcbZ8VFOVlIt3s&amp;list=OLAK5uy_lG01QVCqzoWwsYZD32Wa5w1AlUHvuFegk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p>i love it when tripleS release their instrumental albums bc i really do think they have some of the best production in kpop right now. there so much detail in this. i even heard stuff i couldn't never heard if this was never released. I &hearts; INSTRUMENTALS. actually i like some of these more without the vocals.... i'll listen to anything with a good beat.</p>
+					<p><b>highlights:</b>24, éclair, girls never die, heart raider</p>
+				</td>
+			</table>
+		</details>
+
+		<details>
+			<summary>
+				<span class="date">17.jan.25 - 08.feb.25 : lemon melon cookie / 11100011</span>
 			</summary>
 			<table>
 				<td class="t-left">
