--- a/doqmeat/music/listening-log/index.html
+++ b/doqmeat/music/listening-log/index.html
@@ -33,6 +33,7 @@
 		<h3>pages</h3>
 		<h4>2025</h4>
 		<p>RYM <a href="https://rateyourmusic.com/list/doqmeat/2025-log" target="_blank" class="outlink">log</a> / <a href="https://rateyourmusic.com/list/doqmeat/2025-highlights" target="_blank" class="outlink">highlights</a></p>
+		<a href="2025/index.html">music posts</a>
 		<h4>2024</h4>
 		<p>RYM <a href="https://rateyourmusic.com/list/doqmeat/2024-log" target="_blank" class="outlink">log</a> / <a href="https://rateyourmusic.com/list/doqmeat/2024-highlights" target="_blank" class="outlink">highlights</a></p>
 		<a href="2024/fall.html">fall</a>
