--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -68,6 +68,7 @@
 
   <div id="updates" class="box">
    <h3>updates</h3>
+   <p><b>08.feb.25</b> - new listening log: <a href="listening-log/2025/index.html#1" target="mainframe">DeBÍ TiRAR MáS FOToS</a></p>
    <p><b>26.jan.25</b> - added <a href="links.html" target="mainframe">related links</a> page</p>
    <p><b>23.jan.25</b> - updated <a href="kpop-producers.html" target="mainframe">fav kpop producers</a> + added a message box where you can recommend me something and it will pop up to my e-mail!</p>
    <p><b>17.jan.25</b> - new featured releases!</p>
@@ -92,15 +93,15 @@
   <div id="featured" class="box">
    <h3>featured song &amp; album</h3>
    <div class="song">
-    <h4><b>lemon melon cookie</b> - TAK</h4>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5l8VZEyNRH8?si=OQj0n-oilZpQZUyb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <p>TAK is one of my favorite k-pop producers and a name that i always look forward to when i see him in the song credits. so when i saw that he left the production team NEWTYPE and just started doing his own thing INCLUDING making vocaloid songs i was like WOAH??? i kinda jumped a bit. idk if he will still produce songs for k-pop idols / groups again but either way i kinda won here. TAK's electronic style with those sick and catchy synths is a sound that i just never get tired of. anyway, this song is so much fun!</p>
+    <h4><b>BAILE INoLVIDABLE</b> - bad bunny</h4>
+    <iframe width="718" height="404" src="https://www.youtube.com/embed/a1Femq4NPxs" title="BAD BUNNY - BAILE INoLVIDABLE (Video Oficial) | DeBÍ TiRAR MáS FOToS" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>lowkey blew my mind when i first heard it and also opened my heart to bad bunny.</p>
    </div>
    <div class="lp">
-    <h4><b>11100011</b> - asian glow</h4>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wKETg-efIPE?si=3I4CGNRsTe27pYFI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <p>my first ever asian glow full album listen i think.... and man did i love this so very much! i feel like theres lots of textures in here and i love the mix of shoegaze with electronic elements. a nice and sweet listen despite all the noise. might become one of my fav releases of 2025 already idgaf.</p>
-    <p><b>highlights:</b> camel8strike, jitnunkebi (winter's song), dorothee thines</p>
+    <h4><b>4study4work4inst Vol.2</b> - tripleS</h4>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=PmIcbZ8VFOVlIt3s&amp;list=OLAK5uy_lG01QVCqzoWwsYZD32Wa5w1AlUHvuFegk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>i love it when tripleS release their instrumental albums bc i really do think they have some of the best production in kpop right now. there so much detail in this. i even heard stuff i couldn't never heard if this was never released. I &hearts; INSTRUMENTALS. actually i like some of these more without the vocals.... i'll listen to anything with a good beat.</p>
+    <p><b>highlights:</b>24, éclair, girls never die, heart raider</p>
    </div>
    <hr>
 
