joined programming fanlisting

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -216,6 +216,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 			<!-- fanlistings -->
 			<div id="listing" class="comm-box">
+				<a href="https://fan.leilukin.com/programming/" target="_blank"><img src="/!g/web/fanlisting/programming.png" alt="programming fanlisting"></a>
 				<a href="http://fanique.altervista.org/emoticons/" target="_blank"><img src="!g/web/fanlisting/emoticons.png" alt="emoticons"></a>
 
 				<a href="https://coool.neocities.org/ss/" target="_blank"><img src="!g/web/fanlisting/style-savvy.png" alt="style savvy"></a>
