--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -195,6 +195,7 @@
 			<a title="april" href="https://tilde.club/~april/" target="_blank"><img src="!g/april.gif" alt="april"></a>
 			<a href="https://pluto22.neocities.org/" target="_blank"><img src="!g/pluto2.png" alt="pluto22"></a>
 			<a href="https://liminalmind.neocities.org/" target="_blank"><img src="!g/liminalmind.png" alt="liminalmind"></a>
+			<a href="https://tummytime.neocities.org" target="_blank"><img src="!g/tummytime.gif" alt="tummytime"></a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">e-mail me</a> if you do have one!)</h4>
