--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -50,6 +50,9 @@
 			<section id="y2025">
 				<!-- logs under here!!! -->
 				<article>
+					<p><b>13.feb.25 - 10am</b> something that i failed to mention on my last log was that my site having such a reach also means that it will inevitably get to places outside of its target. scary places. it is the internet after all and everyone does have access to it. but with this said, the positives will always outweigh the negatives. i will continue to have fun and silly and be <u>me</u> on the internet no matter what <img src="https://doqmeat.com/!g/pix/emote1lov.gif" alt=""></p>
+				</article>
+				<article>
 					<p><b>02.feb.25 - 12pm</b> i clicked on a random <a title="★ stargirl lee - you should make a personal website and join the indie web ^_^" href="https://youtu.be/4I48N6pGu2Y" target="_blank" class="outlink">youtube video</a> about the indie web and to my surprise my website was mentioned in it! it kinda takes me aback the reach my personal site has had. from people telling me they love the look, to just saying how they relate to the things i write in here. i am very grateful. i recently reached 1000 followers on neocities. that is a crazy number to me. i never thought my site would reach as many people as it has when i first created it. its pretty heartwarming to see something i created for <i>myself</i> to be so recognized and enjoyed by others.</p>
 				</article>
 				<article>
