--- a/doqmeat/recipes/sandwiches-de-mezcla.html
+++ b/doqmeat/recipes/sandwiches-de-mezcla.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
- <p>i got this recipe from my mom and then proceeded to eye ball the ingredients as i put it in the blender. people do sandwiches de mezcla in very different ways which is why i can't even just link to another recipe bc they are all different! here one i <a href="https://thenoshery.com/sandwich-de-mezcla-puerto-rican-party-sandwiches/" target="_blank">found</a> though.</p>
+ <p>i got this recipe from my mom and then proceeded to eye ball the ingredients as i put it in the blender. <small>if i ever take the measurements i will input them here some day...</small> people do sandwiches de mezcla in very different ways which is why i can't even just link to another recipe bc they are all different! here one i <a href="https://thenoshery.com/sandwich-de-mezcla-puerto-rican-party-sandwiches/" target="_blank">found</a> though.</p>
 
  <hr>
 
