--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -50,6 +50,9 @@
 			<section id="y2025">
 				<!-- logs under here!!! -->
 				<article>
+					<p><b>16.feb.25 - 11am</b> my girlfriend got me the same valentine's day card that i got her... so cute. i love her so much! <button onclick="showPic('!g/250216-flowers.png','a cup with some flowers','she also got me flowers! not sure what kind they are!')">flowers.png</button></p>
+				</article>
+				<article>
 					<p><b>13.feb.25 - 10am</b> something that i failed to mention on my last log was that my site having such a reach also means that it will inevitably get to places outside of its target. scary places. it is the internet after all and everyone does have access to it. but with this said, the positives will always outweigh the negatives. i will continue to have fun and silly and be <u>me</u> on the internet no matter what <img src="https://doqmeat.com/!g/pix/emote1lov.gif" alt=""></p>
 				</article>
 				<article>
