updated reading log a little bit

--- a/doqmeat/reading/index.html
+++ b/doqmeat/reading/index.html
@@ -18,48 +18,68 @@
 <body>
 	<main>
 		<h1>reading log</h1>
+		<details>
+			<summary>legend</summary>
+			<p>❤︎ - favorite</p>
+		</details>
 		<a title="pixel by bitmapdreams" href="http://lastsecret.net/bitmapdreams" target="_blank"><img src="https://doqmeat.com/!g/deco/crystalgreenhouse_book.gif" style="float:left;"></a>
 		<h2>current</h2>
 		<ul>
-			<li>chainsaw man -- (ongoing)
+			<li>chainsaw man → (ongoing)
 				<details>
 					<summary></summary>fujimoto going to hell bro. but anyways.
 					<br>
-					<img src="!g/csm/ch1-42-shots (1).jpg" alt="chainsaw man panels">
-					<img src="!g/csm/ch1-42-shots (2).jpg" alt="chainsaw man panels">
-					<img src="!g/csm/ch1-42-shots (3).jpg" alt="chainsaw man panels">
-					<img src="!g/csm/ch1-42-shots (4).jpg" alt="chainsaw man panels">
-					<img src="!g/csm/ch1-42-shots (5).jpg" alt="chainsaw man panels">
-					<img src="!g/csm/ch1-42-shots (6).jpg" alt="chainsaw man panels">
-					<img src="!g/csm/ch1-42-shots (7).jpg" alt="chainsaw man panels">
-					<img src="!g/csm/ch1-42-shots (8).jpg" alt="chainsaw man panels">
-					<img src="!g/csm/ch1-42-shots (9).jpg" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (1).jpg" width="48%" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (2).jpg" width="48%" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (3).jpg" width="48%" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (4).jpg" width="48%" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (5).jpg" width="48%" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (6).jpg" width="48%" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (7).jpg" width="48%" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (8).jpg" width="48%" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (9).jpg" width="48%" alt="chainsaw man panels">
 				</details>
 			</li>
-			<li>the guy she was interested in wasn't a guy at all -- (ongoing)
+			<li>the guy she was interested in wasn't a guy at all → (ongoing)
 				<details>
 					<summary></summary>
 					<p>very cute and fun manga to look at though it sure is dragging a lot... but you know what i'll let it slide. green yuri forever.</p>
-					<img src="!g/green-yuri/231022-shots (1).jpg" alt="the guy she was interested in wasn't a guy at all panels">
-					<img src="!g/green-yuri/231022-shots (2).jpg" alt="the guy she was interested in wasn't a guy at all panels">
-					<img src="!g/green-yuri/231022-shots (3).jpg" alt="the guy she was interested in wasn't a guy at all panels">
-					<img src="!g/green-yuri/231022-shots (4).jpg" alt="the guy she was interested in wasn't a guy at all panels">
-					<img src="!g/green-yuri/231022-shots (5).jpg" alt="the guy she was interested in wasn't a guy at all panels">
-					<img src="!g/green-yuri/231022-shots (6).jpg" alt="the guy she was interested in wasn't a guy at all panels">
-					<img src="!g/green-yuri/231022-shots (7).jpg" alt="the guy she was interested in wasn't a guy at all panels">
+					<img src="!g/green-yuri/231022-shots (1).jpg" width="48%" alt="the guy she was interested in wasn't a guy at all panels">
+					<img src="!g/green-yuri/231022-shots (2).jpg" width="48%" alt="the guy she was interested in wasn't a guy at all panels">
+					<img src="!g/green-yuri/231022-shots (3).jpg" width="48%" alt="the guy she was interested in wasn't a guy at all panels">
+					<img src="!g/green-yuri/231022-shots (4).jpg" width="48%" alt="the guy she was interested in wasn't a guy at all panels">
+					<img src="!g/green-yuri/231022-shots (5).jpg" width="48%" alt="the guy she was interested in wasn't a guy at all panels">
+					<img src="!g/green-yuri/231022-shots (6).jpg" width="48%" alt="the guy she was interested in wasn't a guy at all panels">
+					<img src="!g/green-yuri/231022-shots (7).jpg" width="48%" alt="the guy she was interested in wasn't a guy at all panels">
 				</details>
 			</li>
-			<li>company and private life -- (ongoing)</li>
+			<li>company and private life → (ongoing)</li>
 		</ul>
 
 		<h2>shelved</h2>
 		<ul>
-			<li>my cat is such a weirdo -- volume 1/3</li>
-			<li>bloodborne -- 13 / ???</li>
+			<li>my cat is such a weirdo → volume 1/3 <details>
+					<summary></summary>
+					<p>250216 → super cute manga about the mangaka's silly cats. got it while visiting florida, US. will eventually read the other volumes some other time.</p>
+					<img src="/journal/2024/!g/240105-manga-p1.jpg" width="48%" alt="comic strips alongside a real life picture of the mangaka's cats">
+					<img src="/journal/2024/!g/240105-manga-p2.jpg" width="48%" alt="comic strips alongside a real life picture of the mangaka's cats">
+				</details>
+			</li>
+			<li>bloodborne → 13 / ???</li>
 		</ul>
 
 		<h2>finished</h2>
 		<ul>
+			<li id="wraith-arc">puella magi madoka magica: wraith arc <details>
+					<summary></summary>
+					<p>250216 → basically a tie in between the anime and and rebellion. which tbh i don't think it was necessary needed, but pretty cool it's there. and this is also considered sort of a spin off so i don't really know if this is canon or not in the lens of the whole story. it terms of it's story it does provide a more clear view of how homura turned out to be trapped (alongside the others) in her own witch labyrinth in <i>rebellion</i>. it was nice to see more about how wraiths work and how are they any different from witches. alsoooo soo interesting to know that homura now has memory altering powers in this version of her since her 'supposedly' didn't work.</p>
+					<p>while i obviously prefer the art of the anime, the art style of the manga series is pretty good as well!</p>
+					<figure>
+						<img src="!g/wraith-arc/homura.jpeg" alt="homura akemi screenshit from wraith arc" width="100%">
+						<figcaption>shes's so badass</figcaption>
+					</figure>
+				</details>
+			</li>
 			<li>villain
 				<details>
 					<summary></summary>
@@ -70,9 +90,9 @@
 					<img src="!g/villain/3.jpg" width="40%" alt="screenshots of villain">
 				</details>
 			</li>
-			<li>mob psycho 100</li>
+			<li>mob psycho 100 ❤︎</li>
 			<li>blue</li>
-			<li>look back</li>
+			<li>look back ❤︎</li>
 			<li>goodbye, eri</li>
 			<li>our dreams at dusk <details>
 					<summary></summary>
@@ -81,12 +101,12 @@
 					<img src="!g/our-dreams-at-dusk/dream (2).jpg">
 				</details>
 			</li>
-			<li>the little prince</li>
-			<li>paper girls</li>
+			<li>the little prince ❤︎</li>
+			<li>paper girls ❤︎</li>
 			<li>the girl from the sea</li>
 			<li>uzumaki</li>
 			<li>remina</li>
-			<li>my lesbian experience with loneliness</li>
+			<li>my lesbian experience with loneliness ❤︎</li>
 			<li>homestuck <details>
 					<summary></summary>
 					a very formative piece of media... if you know you know.
@@ -114,11 +134,11 @@
 	</main>
 
 	<footer>
-		<b>last updated: 03.jan.25</b>
+		<b>last updated: 16.feb.25</b>
 		<br>
 		<b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: gaegu.
 		<br>
-		<a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a>
+		<a href="#">top</a> ⋆ <a href="/">home</a> ⋆ <a href="/sitemap">sitemap</a>
 	</footer>
 </body>
 
