updated currently on my homepage

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -120,11 +120,11 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<div id="current" class="box">
 			<h2>currently...</h2>
 			<p><span class="hl">playing:</span> style savvy games, balatro</p>
-			<p><span class="hl">reading:</span> <i>puella magi madoka magica: wraith arc</i></p>
+			<!-- <p><span class="hl">reading:</span> </p> -->
 			<p><span class="hl">watching:</span> severance, twin peaks: the return</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> fighting for my life trying to understand calculus, cooking up homepage v5</p>
-			<p class="date">last updated on 02.feb.25</p>
+			<p class="date">last updated on 16.feb.25</p>
 		</div>
 
 		<div id="piclog" class="box">
