added some links

--- a/doqmeat/music/links.html
+++ b/doqmeat/music/links.html
@@ -26,6 +26,7 @@
    <li><a href="http://www.rpgamers.net/radio/" target="_blank">RPGamers Radio</a> - honestly incredible to me this is still up, used to put this on a lot while doing homework during high school. video game soundtracks.</li>
    <li><a href="https://www.tree.fm/">tree.fm</a> - listen to a forest!</li>
    <li><a href="https://www.lofiatc.com/?icao=kphx" target="_blank">lo-fi air traffic control</a></li>
+   <li><a href="https://jetsetradio.live/" target="_blank">jetsetradio.live</a></li>
   </ul>
 
   <h3>websites</h3>
