--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -157,6 +157,7 @@
 		<hr>
 
 		<h3 id="sites">useful sites</h3>
+		<li><a href="https://roadmap.sh/" target="_blank">roadmap.sh</a> - developer roadmaps</li>
 		<li><a href="https://ready.mobi" target="_blank">ready.mobi</a> - check how your site looks on mobile</li>
 		<li><a href="https://codebeautify.org/htmlviewer" target="_blank">codebeautify.org</a> - makes your code pretty. you can also minimize your code as well</li>
 		<li><a href="https://nekocalc.com/px-to-rem-converter" target="_blank">px-to-rem</a> converter</li>
@@ -377,6 +378,7 @@
 		<li><a href="https://wiby.me/" target="_blank">wiby.me</a> - search engine that only indexes sites without JS</li>
 		<li><a href="http://theoldnet.com" target="_blank">the old net</a> - navigate the internet during different years</li>
 		<li><a href="https://ihavenotv.com/" target="_blank">ihavenotv</a> - a website that links you documentaries to watch.</li>
+		<li><a href="https://remoji.com/" target="_blank">remoji</a> - make lines with emojis with your cursor</li>
 
 		<h3 id="comm">communities</h3>
 		<li><a href="https://discourse.32bit.cafe/" target="_blank">discourse.32bit.cafe</a> - a nice forum of website hobbyists and professionals</li>
@@ -431,7 +433,7 @@
 
 		<h4 id="pixel-cliques">pixel cliques</h4>
 		<li><a href="https://divergentrays.com/kitty" target="_blank">kitty friends pixel club</a></li>
-		<li><a href="https://cdworld.neocities.org/" target="_blank">CD WoRLD</a> - pixel art clique for music lovers</li>
+		<li><a href="https://humanfinny.neocities.org/clubs/cd_world" target="_blank">CD WoRLD</a> - pixel art clique for music lovers</li>
 		<li><a href="https://leviathren.neocities.org/hallofrock" target="_blank">hall of rock</a> - a pixel guitar clique!</li>
 		<li><a href="https://charmbracelets.neocities.org" target="_blank">charm bracelets pixel club</a></li>
 		<li><a href="https://lostletters.neocities.org/afternoontea/" target="_blank">afternoon tea</a></li>
