--- a/doqmeat/reading/index.html
+++ b/doqmeat/reading/index.html
@@ -72,7 +72,7 @@
 		<ul>
 			<li id="wraith-arc">puella magi madoka magica: wraith arc <details>
 					<summary></summary>
-					<p>250216 → basically a tie in between the anime and and rebellion. which tbh i don't think it was necessary needed, but pretty cool it's there. and this is also considered sort of a spin off so i don't really know if this is canon or not in the lens of the whole story. it terms of it's story it does provide a more clear view of how homura turned out to be trapped (alongside the others) in her own witch labyrinth in <i>rebellion</i>. it was nice to see more about how wraiths work and how are they any different from witches. alsoooo soo interesting to know that homura now has memory altering powers in this version of her since her 'supposedly' didn't work.</p>
+					<p>250216 → basically a tie in between the anime and and rebellion. which tbh i don't think it was necessarily needed, but pretty cool it's there. and this is also considered sort of a spin off so i don't really know if this is canon or not in the lens of the whole story. it terms of it's story it does provide a more clear view of how homura turned out to be trapped (alongside the others) in her own witch labyrinth in <i>rebellion</i>. it was nice to see more about how wraiths work and how are they any different from witches. alsoooo soo interesting to know that homura now has memory altering powers in this version of her since her 'supposedly' didn't work.</p>
 					<p>while i obviously prefer the art of the anime, the art style of the manga series is pretty good as well!</p>
 					<figure>
 						<img src="!g/wraith-arc/homura.jpeg" alt="homura akemi screenshit from wraith arc" width="100%">
